# spine3.8-glfw

./: .gitignore  CMakeLists.txt  main.c  spine_impl.c
shaders/: spine.frag  spine.vert
